[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pylast"
version = "0.0.1"
description = "A simple example of using nanobind to bind C++ code to Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Zach Peng", email="zhipzhang@mail.ustc.edu.cn" }
]
classifiers = [
    "License :: BSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
